--- a/objetivo.html
+++ b/objetivo.html
@@ -29,6 +29,8 @@
         <br>
         <p>Dado que los buscadores tradicionales arrojan a menudo resultados erróneos, con lugares que no necesariamente son libres de gluten, decidimos armar esta guía para facilitar esa búsqueda.</p>
         <br>
+        <p>Salvo algunas excepciones, los lugares de comidas de esta guía se encuentran ubicados en CABA y alrededores.</p>
+        <br>
         <p>Todas las sugerencias sobre la inclusión de nuevos lugares son bienvenidas.</p>
         <br><br><br><br>
         <a href="index.html#home">Volver</a>
